[tool.poetry]
name = "pysus"
version = "0.9.4"  # changed by semantic-release
description = "Tools for dealing with Brazil's Public health data"
authors = ["Flavio Codeco Coelho <fccoelho@gmail.com>"]
license = "GPL"

packages = [{include='pysus'}]

[tool.poetry.dependencies]
cffi = "1.15.1"
dbfread = "2.0.7"
fastparquet = "^0.8.1"
numpy = "1.23.2"
pyarrow = ">=11.0.0"
pycparser = "2.21"
pyreaddbc = ">=1.1.0"
python = "^3.11"
python-dateutil = "2.8.2"
tqdm = "4.64.0"
wget = "^3.2"
loguru = "^0.6.0"
Unidecode = "^1.3.6"
elasticsearch = "7.16.2"
dateparser = "^1.1.8"
pandas = ">=1.5.3"
urwid = "^2.1.2"
# Preprocessing Packages
geobr = { version = "^0.2.0", extras=["preprocessing"] }
geocoder = { version = "^1.38.1", extras=["preprocessing"] }
jsonschema = "^4.19.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.1.0"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
sphinx = "^5.1.1"
nbmake = "^1.4.1"
matplotlib = "^3.7.1"
folium = "^0.14.0"
seaborn = "^0.12.2"
descartes = "^1.1.0"
keplergl = "^0.3.2"
jupyterlab = "^4.0.5"
ipykernel = "^6.25.1"
pytest-timeout = "^2.1.0"


[tool.poetry.group.ftp.dependencies]
bigtree = "^0.12.2"
aioftp = "^0.21.4"
humanize = "^4.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 79
color = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-ra -q"
]
testpaths = [
    "tests"
]

exclude = ["*.git", "docs/"]

[tool.poetry.extras]
preprocessing = ["geobr", "geocoder"]

