[tool.poetry]
name = "pysus"
version = "1.0.1"  # changed by semantic-release
description = "Tools for dealing with Brazil's Public health data"
authors = ["Flavio Codeco Coelho <fccoelho@gmail.com>", "Luã Bida Vacaro <luabidaa@gmail.com>"]
license = "GPL"

packages = [{ include = "pysus"}]

exclude = [
  "pysus/tests",
  "pysus/tests/**",
  "pysus/management",
  "pysus/management/**"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
python-dateutil = "2.8.2"
fastparquet = ">=2023.10.1,<=2024.11.0"
pyarrow = ">=11.0.0"
numpy = ">1,<3"
tqdm = "4.64.0"
wget = "^3.2"
loguru = "^0.6.0"
Unidecode = "^1.3.6"
dateparser = "^1.1.8"
pandas = "^2.2.2"
typing-extensions = ">=4.10.0"
pydantic = "^2.12.5"
duckdb = "^1.4.4"
duckdb-engine = "^0.17.0"
sqlalchemy = "^2.0.48"
textual = {extras = ["syntax"], version = "^8.2.1"}
python-magic = "^0.4.27"
chardet = "^7.4.0.post2"
anyio = "^4.13.0"

dbfread = { version = "2.0.7", optional = true }
pyreaddbc = { version = ">=1.1.0", optional = true }
pycparser = { version = "2.21", optional = true }
bigtree = { version = "^0.12.2", optional = true }
aioftp = { version = "^0.21.4", optional = true }
humanize = { version = "^4.8.0", optional = true }

[tool.poetry.extras]
ftp = ["dbfread", "pyreaddbc", "pycparser", "bigtree", "aioftp", "humanize"]

[tool.poetry.group.dev.dependencies]
pytest = ">=6.1.0"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest-timeout = "^2.1.0"
nbsphinx = "^0.9.3"
pytest-retry = "1.7.0"
datamodel-code-generator = {extras = ["http"], version = "^0.54.0"}
pytest-asyncio = "^1.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.1.1"
nbmake = "^1.4.1"
matplotlib = "^3.7.1"
jupyterlab = "^4.0.5"
ipykernel = "^6.25.1"
seaborn = "^0.12.2"
tomli = "^2.0.1"
sphinx-rtd-theme = "^1.3.0"
nbsphinx = "^0.9.3"

[tool.poetry.group.geo.dependencies]
geocoder = { version = "^1.38.1", extras=["preprocessing"] }
jsonschema = "^4.19.0"
descartes = "^1.1.0"
folium = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 79
color = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-ra -q"
]
testpaths = [
    "tests"
]

exclude = ["*.git", "docs/"]
