[metadata]
license_file = LICENSE

[options]
packages = find:
include = 
    pysus

[build_sphinx]
project = 'PySUS'
version = 0.6
release = 0.6.3
source-dir = ./docs/source

[flake8]
exclude = tests,build,dist,docs,.git,__pycache__,.tox,.eggs,*.egg,.asv
max-line-length = 79
ignore = D202,D203,W503,E203

[isort]
known_third_party = dbfread,elasticsearch,geobr,geocoder,numpy,pandas,pyarrow,pyreaddbc,requests,tqdm,urllib3
ensure_newline_before_comments=true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip = docs/

[aliases]
test = pytest

[tool:pytest]
addopts = --ignore=setup.py
